--- a/sites/all/themes/remontip/css/layout.css
+++ b/sites/all/themes/remontip/css/layout.css
@@ -1,25 +1,25 @@
 /* index.html */
-#page1 .col-1 {
+body.front .col-1 {
 	width:660px;
 	margin-right:65px
 }
-#page1 .col-2 {
+body.front .col-2 {
 	width:280px
 }
-#page1 .column-1 {
+body.front .column-1 {
 	width:326px;
 	margin-right:21px
 }
-#page1 .column-2 {
+body.front .column-2 {
 	width:326px
 }
-#page1 .indent {
+body.front .indent {
 	padding:21px 0 20px
 }
-#page1 #content {
+body.front #content {
 	padding:10px 0 33px
 }
-#page1 .box .padding {
+body.front .box .padding {
 	padding:18px 10px 0 30px
 }
 /* index-1.html */
@@ -76,10 +76,10 @@
 	width:326px
 }
 /* index-5.html */
-#page6 .col-1 {
+body.page-contact .col-1 {
 	width:670px;
 	margin-right:55px
 }
-#page6 .col-2 {
+body.page-contact .col-2 {
 	width:265px
 }
